@@ -40,6 +40,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fix hanging issue when closing files on windows (completing a download)
 	* fix piece picking edge case that could cause torrents to get stuck at hash failure
 	* try unencrypted connections first, and fall back to encryption if it fails (performance improvement)
 	* add missing functions to python binding (flush_cache(), remap_files() and orig_files())
